@@ -2,10 +2,12 @@ gforge (3.1-3+) unstable; urgency=low
 
   * [Christian] corrected stupid chmod error in user_dump_update.pl
     that was making unwritable htdocs dir to the group
-  * [Christian] added support for cvsweb.php a cvsweb wrapper 
+  * [Christian] added support for cvsweb.php a cvsweb wrapper
     updated to last cvsweb version
+  * [Chrsitian] added setup and cleanup target in install-ldap.sh
+    and fill crypted password
 
- -- Christian Bayle <bayle@debian.org>  Sun,  9 Nov 2003 20:16:48 +0100
+ -- Christian Bayle <bayle@debian.org>  Mon, 10 Nov 2003 23:42:45 +0100
 
 gforge (3.1-3) unstable; urgency=low
 
